samples/_failures_safe/1761437482_dc3396_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41c0424a.c: In function ‘main’:
./samples/SAFE/__tmp_41c0424a.c:167:16: error: missing terminating " character
  167 |         printf("Processing event type
      |                ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_41c0424a.c:167:9: error: expected expression at end of input
  167 |         printf("Processing event type
      |         ^~~~~~
./samples/SAFE/__tmp_41c0424a.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_41c0424a.c:167:9: error: expected declaration or statement at end of input
